syntax = "proto3";

package abc;

message RootMsg {
  string name = 1;
}